--- a/Demo20200817.ipynb
+++ b/Demo20200817.ipynb
@@ -27,7 +27,7 @@
       "source": [
         "! nvidia-smi"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +83,7 @@
         "b = 3\n",
         "a + b"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +113,7 @@
       "source": [
         "a * 10"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -153,7 +153,7 @@
       "source": [
         "3 + 2 * 8"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +183,7 @@
       "source": [
         "type(3)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -213,7 +213,7 @@
       "source": [
         "type(3.0)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -244,7 +244,7 @@
         "# plus\n",
         "2+1"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +274,7 @@
       "source": [
         "2-1"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,7 +304,7 @@
       "source": [
         "2*3"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -334,7 +334,7 @@
       "source": [
         "3/2"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -364,7 +364,7 @@
       "source": [
         "2 ** 3"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +394,7 @@
       "source": [
         "4 ** 0.5"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -424,7 +424,7 @@
       "source": [
         "2+10*10+3"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -454,7 +454,7 @@
       "source": [
         "(2+10)*(10+3)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +480,7 @@
       "source": [
         "a = 5"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -497,7 +497,7 @@
       "source": [
         "a + a"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -527,7 +527,7 @@
       "source": [
         "a"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -553,7 +553,7 @@
       "source": [
         "a = a + a"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -570,7 +570,7 @@
       "source": [
         "a"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,7 +597,7 @@
         "price = 49.99\n",
         "exchange_rate = 32.33"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -610,7 +610,7 @@
       "source": [
         "ntd_price=price * exchange_rate"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -627,7 +627,7 @@
       "source": [
         "ntd_price"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -657,7 +657,7 @@
       "source": [
         "NTD_PRICE"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -673,9 +673,105 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ehLJin6mH4fN",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Practice"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Ft8zOIMIDdE3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = (2+1) ** (1/10) - 1"
+      ],
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UPSuqf3NH9PJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "b = (1+1) ** (1/5) - 1"
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uvHZpUmoIEUI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "657dded1-3a6c-48a2-9ffa-33069d7ae05c"
+      },
+      "source": [
+        "a"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.11612317403390437"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LO-DevQlIGEA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ae22cd7f-8467-4713-c2c7-0538a4b19520"
+      },
+      "source": [
+        "b"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.1486983549970351"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pluTaG_4IHJQ",
         "colab_type": "code",
         "colab": {}
       },
