--- a/Demo20200817.ipynb
+++ b/Demo20200817.ipynb
@@ -3122,9 +3122,94 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Cf3GcMNdi_xV",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Practice"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "mtelfRgfgHFi",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "11a295cb-b589-4d6a-b967-62fe7eb72876"
+      },
+      "source": [
+        "deposit = 300000\n",
+        "withdraw = int(input('請輸入您要提款的金額:'))\n",
+        "deposit = deposit - withdraw\n",
+        "#deposit\n",
+        "#'您已經提領了 {withdraw} 元整，您的餘額還剩下 {deposit} 元整'.format(withdraw = withdraw, deposit = deposit)\n",
+        "f'您已經提領了 {withdraw:,} 元整，您的餘額還剩下 {deposit:,} 元整'"
+      ],
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入您要提款的金額:5000\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'您已經提領了 5,000 元整，您的餘額還剩下 295,000 元整'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 145
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d0wbuUJLjMlr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "12a64133-1685-4c14-bcfa-f218ee757ed9"
+      },
+      "source": [
+        "type(withdraw)"
+      ],
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 131
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qhAlY8JijPO0",
         "colab_type": "code",
         "colab": {}
       },
