--- a/Demo20200817.ipynb
+++ b/Demo20200817.ipynb
@@ -2962,7 +2962,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### Input"
+        "## Input"
       ]
     },
     {
@@ -4270,9 +4270,485 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AVjY41c_5uw8",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Practice"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "zxWcF-fk3jrW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "salaries = [60,90,70,55,120,88,75]\n",
+        "salaries.sort()"
+      ],
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_QzxSzAg50kF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "71907593-07c8-4c5d-ca5a-22f60f8d2c9c"
+      },
+      "source": [
+        "len(salaries)\n",
+        "\n",
+        "#int(len(salaries) / 2)\n",
+        "salaries[3]"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "75"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CrxN7eng7WR8",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Dictionary"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2etuobEi6BDh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dic = {'a':100, 'b':'yes', 'c':0.98}"
+      ],
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1WIhh2mv7kSb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a07f23a7-5701-487b-bd8a-0524f0aeed8a"
+      },
+      "source": [
+        "type(dic)"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CkpOFxVH7mRs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1c0f5fd9-0eb7-47ad-9160-568eb98b5697"
+      },
+      "source": [
+        "dic"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'a': 100, 'b': 'yes', 'c': 0.98}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "srmHqOFU7ocs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cfe01976-71eb-4041-b68a-aa4b19731c6c"
+      },
+      "source": [
+        "dic.keys()"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['a', 'b', 'c'])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iY1_n3F67xZf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "74671c13-7f38-4c10-9c6e-7a8ee60c1bf5"
+      },
+      "source": [
+        "dic.values()"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values([100, 'yes', 0.98])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cNmo95tU71IA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "84ea6a29-fc03-4fed-b2f9-156a5f4ebc4b"
+      },
+      "source": [
+        "dic['a']"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "100"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NWaoVnYt76qp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 164
+        },
+        "outputId": "4b8c07e7-6664-446d-a665-8c246de4c3c4"
+      },
+      "source": [
+        "dic['d']"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-58-2b1b63ca196d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'd'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m: 'd'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0O8HvuyZ79QC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6f6ef38a-459b-484e-fca7-7d9ad55302ce"
+      },
+      "source": [
+        "dic.get('a')"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "100"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-0xbQail8Scj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dic.get('d')"
+      ],
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wOTs91cy8X5z",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "22b7a185-7152-4344-c1fd-c6978c944290"
+      },
+      "source": [
+        "print(dic.get('d'))"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eaFrz4TC8cRo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "4fee78a1-96b8-4746-8f31-86f241c1e808"
+      },
+      "source": [
+        "dic.get('d', 'DEFAULT')"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'DEFAULT'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZPuz3n5R8tkz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1e71c2d8-cc23-4e80-ec46-480d490d0d2d"
+      },
+      "source": [
+        "dic.get('a', 'DEFAULT')"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "100"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h92X_4Hu8wnr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dic['d'] = 'new'"
+      ],
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BgyTfsV986hf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "11770cf5-a012-4777-de04-6879c4d08d78"
+      },
+      "source": [
+        "dic"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'a': 100, 'b': 'yes', 'c': 0.98, 'd': 'new'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1nFSUMoQ87D3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dic.update({'d':1000, 'e':'newnew'})"
+      ],
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JqkC02M99F0b",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "69b48e84-0f07-488c-8544-3d55e391b125"
+      },
+      "source": [
+        "dic"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'a': 100, 'b': 'yes', 'c': 0.98, 'd': 1000, 'e': 'newnew'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uQim3Bv59Gdi",
         "colab_type": "code",
         "colab": {}
       },
