--- a/Demo20200817.ipynb
+++ b/Demo20200817.ipynb
@@ -4746,9 +4746,51 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OuIXSOK__WO8",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Practice"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "uQim3Bv59Gdi",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "53de547a-f8ec-4a79-e356-df93e545686f"
+      },
+      "source": [
+        "qa = {\n",
+        "'我要保險':'以下是我們推薦的險總類',\n",
+        "'我要貸款' :'以下是我們推薦的貸款總類',\n",
+        "'我要查餘額': '以下是您的銀行存款餘額',   \n",
+        "}\n",
+        "question = input('請輸入您的問題:')\n",
+        "print(qa.get(question, '我現在還不聰明，等變聰明以後再回答你'))"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入您的問題:今天會不會水逆\n",
+            "我現在還不聰明，等變聰明以後再回答你\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uUdUcvwm_ohn",
         "colab_type": "code",
         "colab": {}
       },
