--- a/Demo20200817.ipynb
+++ b/Demo20200817.ipynb
@@ -6338,9 +6338,51 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3nQOYDAqO8YB",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Practice"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "miquCcflMy5e",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "c6f89ae7-1eef-42a6-c10b-4e0af50b7ca6"
+      },
+      "source": [
+        "deposit = 300000\n",
+        "withdraw = input('請輸入您想要提領的金額:')\n",
+        "withdraw = int(withdraw)\n",
+        "if withdraw <= deposit:\n",
+        "  print('您已經提領了 {withdraw}元整，您的餘額還剩下 {deposit}元整'.format(withdraw = withdraw, deposit = deposit - withdraw))\n",
+        "else:\n",
+        "  print('您的餘額不足')"
+      ],
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入您想要提領的金額:300000\n",
+            "您已經提領了 300000元整，您的餘額還剩下 0元整\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TQJOJ0C1PgsF",
         "colab_type": "code",
         "colab": {}
       },
