--- a/Demo20200817.ipynb
+++ b/Demo20200817.ipynb
@@ -7309,6 +7309,112 @@
         "colab": {}
       },
       "source": [
+        "qa = {\n",
+        "'保險':'以下是我們推薦的險總類',\n",
+        "'貸款' :'以下是我們推薦的貸款總類',\n",
+        "'餘額': '以下是您的銀行存款餘額',   \n",
+        "}\n",
+        "#question = input('請輸入您的問題:')\n",
+        "#print(qa.get(question, '我現在還不聰明，等變聰明以後再回答你'))"
+      ],
+      "execution_count": 176,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9qTXBvzGcrR8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "dc1a1372-331b-4f4b-d65f-f7f114d4bfab"
+      },
+      "source": [
+        "question = input('請輸入您的問題:')"
+      ],
+      "execution_count": 188,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入您的問題:我想要保保險\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E2rIS3-Xcc5Q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for q in qa:\n",
+        "  if q in question:\n",
+        "    print(qa.get(q))\n",
+        "  #print(q)"
+      ],
+      "execution_count": 185,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NEvenOE-cgug",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for q in qa:\n",
+        "  if q in question:\n",
+        "    print(qa.get(q))\n",
+        "    break"
+      ],
+      "execution_count": 186,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yenMYSX0dAyb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "57642594-d858-47d5-84ba-20c3485d3b08"
+      },
+      "source": [
+        "for q in qa:\n",
+        "  if q in question:\n",
+        "    print(qa.get(q))\n",
+        "    break\n",
+        "else:\n",
+        "  print('我現在不想理妳')"
+      ],
+      "execution_count": 189,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "以下是我們推薦的險總類\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uuJAXK5RdSCR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         ""
       ],
       "execution_count": null,
