--- a/Demo20200818.ipynb
+++ b/Demo20200818.ipynb
@@ -1633,9 +1633,604 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UmeUj4RxbsQv",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Practice"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "6iVYW7afYruH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = '''1:壹, 2:貳, 3:參, 4:肆, 5:伍, 6:陸, 7:柒, 8:捌, 9:玖'''"
+      ],
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "leb0e7qhcCvU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dic = {}\n",
+        "for ele in a.split(','):\n",
+        "  k,v = ele.strip().split(':')\n",
+        "  dic[k] = v"
+      ],
+      "execution_count": 87,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0WPuyqi1cEa_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        },
+        "outputId": "89d3c357-f44a-42d9-8bff-7fc9a3c41534"
+      },
+      "source": [
+        "dic"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'1': '壹',\n",
+              " '2': '貳',\n",
+              " '3': '參',\n",
+              " '4': '肆',\n",
+              " '5': '伍',\n",
+              " '6': '陸',\n",
+              " '7': '柒',\n",
+              " '8': '捌',\n",
+              " '9': '玖'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2Vzl_obRceJQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dic = {'1': '壹',\n",
+        " '2': '貳',\n",
+        " '3': '參',\n",
+        " '4': '肆',\n",
+        " '5': '伍',\n",
+        " '6': '陸',\n",
+        " '7': '柒',\n",
+        " '8': '捌',\n",
+        " '9': '玖',\n",
+        " '0': '零'}"
+      ],
+      "execution_count": 93,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MqKf-TiBcw_G",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "82454df9-b45f-4c32-970f-504896125fe2"
+      },
+      "source": [
+        "s = 16800\n",
+        "for e in str(s):\n",
+        "  print(dic.get(e))"
+      ],
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "壹\n",
+            "陸\n",
+            "捌\n",
+            "零\n",
+            "零\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5WjQVNRlc29j",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def numberConvert(n):\n",
+        "  s = ''\n",
+        "  for e in str(n):\n",
+        "    s += dic.get(e)\n",
+        "  return s"
+      ],
+      "execution_count": 95,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WSI9TwbWdUp8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "76172f1e-2f05-4cc7-ea75-eea676c21354"
+      },
+      "source": [
+        "numberConvert(948794)"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'玖肆捌柒玖肆'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HieJqVu5dZDE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "bae246cd-2d35-4695-c614-fcc08bee128d"
+      },
+      "source": [
+        "def numberConvert2(n):\n",
+        "  s = []\n",
+        "  for e in str(n):\n",
+        "    s.append(dic.get(e))\n",
+        "  return ''.join(s)\n",
+        "  \n",
+        "numberConvert2(55688)"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'伍伍陸捌捌'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7uOJrPfreK6S",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Lambda"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UwLlQ_QHdq5B",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "79bf7b75-ff41-4c21-9cb7-7c0330b07443"
+      },
+      "source": [
+        "3 ** 2"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xC3MZGoweODX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "12a749a6-0316-4aed-eb6a-8cb90734ec5b"
+      },
+      "source": [
+        "def square(num):\n",
+        "  ret = num ** 2\n",
+        "  return ret\n",
+        "\n",
+        "square(3)"
+      ],
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6QTxjJpeeUS_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "bb5f132f-f3d6-4cac-8937-6ac5a284d62b"
+      },
+      "source": [
+        "def square(num):\n",
+        "  return num ** 2\n",
+        "\n",
+        "square(3)"
+      ],
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GqZhxoJmegz8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "395f3e7d-3440-48c0-a69a-6bb683d171d7"
+      },
+      "source": [
+        "def square(num): return num ** 2\n",
+        "\n",
+        "square(3)"
+      ],
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yWmYQOlLenbt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "square = lambda num : num ** 2"
+      ],
+      "execution_count": 103,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ctkFrHpEevmx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "e53d6c3d-d7b1-476f-debb-17a9343a5fdd"
+      },
+      "source": [
+        "square(3)"
+      ],
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "np3MRD-ReyFZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "4d218ae4-8330-48d8-a2f1-ed5295c494a9"
+      },
+      "source": [
+        "lambda e: e[1]"
+      ],
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<function __main__.<lambda>>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 105
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9PhemoZ1fCpG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9976067d-b0ba-42dd-e633-c29aa69374ad"
+      },
+      "source": [
+        "def getFirst(e):\n",
+        "  return e[1]\n",
+        "\n",
+        "a = ('the', 7)\n",
+        "getFirst(a)"
+      ],
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 106
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UXwNdl0ofQST",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a79070d0-a414-430e-deab-9f132012752e"
+      },
+      "source": [
+        "even = lambda e : e%2 ==0\n",
+        "even(4)"
+      ],
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 108
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "amWhHvh7fc8Q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "b11930b9-7a05-4b93-d32b-20ed25597eae"
+      },
+      "source": [
+        "first =lambda s:s[0]\n",
+        "first('world')"
+      ],
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'w'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 109
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P4X2AfZVfjrf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "de5a36c4-b3a6-4979-f8c0-c18aec2c608b"
+      },
+      "source": [
+        "rev=lambda s:s[::-1]\n",
+        "rev('hello')"
+      ],
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'olleh'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 110
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3s6Z3l45fp3l",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f3fd9163-9bed-4222-dae5-54641d018b21"
+      },
+      "source": [
+        "adder =lambda x,y:x+y\n",
+        "adder(3,5)"
+      ],
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 111
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XYd4OKMsfxqc",
         "colab_type": "code",
         "colab": {}
       },
